# vision_rlm

./: .gitignore  pyproject.toml
configs/train/: qwen25vl_3b_qlora.yaml  qwen25vl_7b_qlora.yaml  qwen3vl_4b_qlora.yaml  qwen3vl_8b_qlora.yaml
scripts/: bootstrap_env.sh  colab_preflight.py  colab_teacher_setup.sh  colab_teacher_smoke.py  fix_torch_cuda.sh  run_e00_smoke.sh  run_e10_bm25.sh  slurm_pilot.sh  start_tmux_session.sh
vision_rlm/: __init__.py  cli.py  paths.py
vision_rlm/env/: __init__.py  schema.py  state.py  tools.py
vision_rlm/eval/: __init__.py  eval_slidevqa.py  eval_transfer.py  frontier_plots.py
vision_rlm/inference/: __init__.py  run_agent.py
vision_rlm/preprocess/: __init__.py  build_indices.py  build_regions.py  common.py  extract_slidevqa.py  parse_layout.py  render_pages.py
vision_rlm/teacher/: __init__.py  filter_rollouts.py  generate_rollouts.py
vision_rlm/training/: __init__.py  build_step_dataset.py  self_improve.py  train_sft_axolotl.py
